--- a/UPD_CLIENTE_JM/udp_cliente_procyeto.ui
+++ b/UPD_CLIENTE_JM/udp_cliente_procyeto.ui
@@ -148,9 +148,9 @@ border-image: url(:/new/prefix1/IMAGENES/cuadrado_rojo_400x400.png);</string>
    <widget class="QLineEdit" name="carnet">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>290</x>
       <y>70</y>
-      <width>81</width>
+      <width>61</width>
       <height>31</height>
      </rect>
     </property>
@@ -194,9 +194,9 @@ border-image: url(:/new/prefix1/IMAGENES/cuadrado_rojo_400x400.png);</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>120</x>
       <y>0</y>
-      <width>401</width>
+      <width>451</width>
       <height>41</height>
      </rect>
     </property>
@@ -212,7 +212,7 @@ border-image: url(:/new/prefix1/IMAGENES/cuadrado_rojo_400x400.png);</string>
      <enum>Qt::RightToLeft</enum>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:24pt;&quot;&gt;CONTROL DEL MOTOR&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:24pt;&quot;&gt;MONITOREO DEL MOTOR&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="veli">
@@ -400,8 +400,11 @@ border-image: url(:/new/prefix1/IMAGENES/cuadrado_rojo_400x400.png);</string>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">gridline-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(61, 11, 2, 255), stop:1 rgba(255, 255, 255, 255));</string>
+    </property>
     <property name="text">
-     <string>INFORMACION DEL MOTOR EN TIEMPO REAL</string>
+     <string>INFORMACIÓN DEL MOTOR EN TIEMPO REAL</string>
     </property>
    </widget>
    <widget class="QLabel" name="v">
@@ -712,7 +715,7 @@ border-image: url(:/new/prefix1/IMAGENES/cuadrado_rojo_400x400.png);</string>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;El siguiente programa podrá revisar&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;la información en tiempo real del motor para &lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;esto por favoringrese su número de carnet.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;El siguiente programa podrá revisar&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;la información en tiempo real del motor para &lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt; color:#000000;&quot;&gt;esto por favoringrese su número de carné.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="letrero3">
